apps/esphome/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: esphome
  namespace: homeassistant
spec:
  selector:
    app: esphome
  ports:
    - name: http
      port: 6052
      targetPort: http
